# Seccy

./: Cargo.toml  README.md  Rocket.toml
src/: OLD.rs  main.rs  storage.rs  stream.rs  util.rs  web.rs
src/storage/: capture.rs  db.rs  storage.rs
src/stream/: camera.rs  stream.rs
src/util/: counters.rs  workers.rs
src/web/: webrtc.rs  webserver.rs  websocket.rs
static/: index.html
static/js/: main.js
