[package]
name = "seccy"
version = "0.1.0"
edition = "2024"

[dependencies]
ffmpeg-next = "8.0.0"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.100"
webrtc = "0.14.0"
futures-util = "0.3.31"
onvif = { git = "https://github.com/lumeohq/onvif-rs" }
crossbeam-channel = "0.5.15"
multiqueue2 = "0.2.1"
rusqlite = "0.38.0"
chrono = "0.4.42"
dir-size = "0.1.1"
fs2 = "0.4.3"
num-traits = "0.2.19"
tungstenite = "0.28.0"
base64 = "0.22.1"
rocket = {version = "0.5.1", features = ["json"]}
serde = "1.0.228"
serde_json = "1.0.149"
